# gitblob

./: .gitignore  build.zig  build.zig.zon
.github/workflows/: ci.yml
src/: config.zig  main.zig
src/git/: c.zig  lib.zig
src/http/: handlers.zig  server.zig
src/pkt/: line.zig
src/repo/: store.zig
testing/: fixture.py  pyproject.toml  run.py
