[project]
name = "gitblob-testing"
version = "0.0.0"
description = "End-to-end tests for the gitblob server."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gitblob-e2e = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["run.py", "fixture.py"]
